@@ -37,7 +37,6 @@ local $| = 1;
 #
 
 #!/usr/bin/perl
-
 print "Location: http://sveinbjorn.org"
 
 # If 0 arguments, we show menu
